--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.8.0+1
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  flutter_markdown: ^0.7.6+2
 
 dev_dependencies:
   flutter_test:
