--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_markdown: ^0.7.6+2
   speech_to_text: ^7.0.0
   flutter_tts: ^4.2.2
+  audio_waveforms: ^1.3.0
 
 dev_dependencies:
   flutter_test:
